Replace cleaned model with improved hazard_detection_model

--- a/hazard_detection_model.ipynb
+++ b/hazard_detection_model.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0f0c1c14",
+   "metadata": {},
+   "source": [
+    "# Smart Drone Hazard Detection Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38dec25d",
+   "metadata": {},
+   "source": [
+    "This notebook contains the AI model used to detect crowd levels and potential hazards during Hajj and Umrah."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b0a8370a-4662-4b8d-9959-d6aab10b17b9",
@@ -214,16 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eTVdajXUQHEE",
-   "metadata": {
-    "id": "eTVdajXUQHEE"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "HwALOqvMQCL1",
    "metadata": {
     "colab": {
@@ -380,7 +386,7 @@
     "            print(\"❌ No image in request\")\n",
     "            return jsonify({\"error\": \"No image uploaded\"}), 400\n",
     "\n",
-    "       \n",
+    "     \n",
     "        f = request.files['image']\n",
     "        temp_path = \"temp.jpg\"\n",
     "        f.save(temp_path)\n",
@@ -390,7 +396,7 @@
     "        img_array = image.img_to_array(img)\n",
     "        img_array = np.expand_dims(img_array, axis=0) / 255.0\n",
     "\n",
-    "      \n",
+    "\n",
     "        predictions = model.predict(img_array)\n",
     "        label = class_names[np.argmax(predictions)]\n",
     "\n",
@@ -959,6 +965,42 @@
     "\n",
     "# Save the model in the recommended format\n",
     "model.save('augmented_model.keras')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acc974e",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing\n",
+    "Explanation of how images are loaded, resized, and prepared for the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "212b1511",
+   "metadata": {},
+   "source": [
+    "## Model Architecture\n",
+    "This section defines and loads the classification model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "376583d1",
+   "metadata": {},
+   "source": [
+    "## Prediction\n",
+    "Using the model to classify new input images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a5799e",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "This model successfully classifies crowd density and detects potential hazards such as fire and fainting. It's designed to assist security teams in real-time monitoring during Hajj and Umrah."
    ]
   }
  ],
