Upload final cleaned and renamed model file

--- a/hazard_detection_model.ipynb
+++ b/hazard_detection_model.ipynb
@@ -88,6 +88,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dbc20b83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_image(path):\n",
+    "    img = image.load_img(path, target_size=(224, 224))\n",
+    "    img_array = image.img_to_array(img)\n",
+    "    return np.expand_dims(img_array, axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c04a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_class(model, img_array, class_names):\n",
+    "    predictions = model.predict(img_array)\n",
+    "    predicted_class = class_names[np.argmax(predictions)]\n",
+    "    print(\"Predicted Event:\", predicted_class)\n",
+    "    return predicted_class\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e225f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_accuracy(history):\n",
+    "    plt.plot(history.history['accuracy'])\n",
+    "    plt.plot(history.history['val_accuracy'])\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.legend(['Train', 'Validation'])\n",
+    "    plt.title('Training and Validation Accuracy')\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6J-O50ZrNMH1",
    "metadata": {
     "colab": {
@@ -226,6 +270,16 @@
     "plt.title('Training and Validation Accuracy')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eTVdajXUQHEE",
+   "metadata": {
+    "id": "eTVdajXUQHEE"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -372,13 +426,13 @@
     "\n",
     "app = Flask(__name__)\n",
     "\n",
-    "\n",
+    "# تحميل النموذج\n",
     "model = load_model('/content/drive/MyDrive/crowd_fire_model.keras')\n",
     "\n",
-    "\n",
+    "# أسماء الكلاسات\n",
     "class_names = ['dense_crowd', 'fainting', 'fire', 'moderate_crowd', 'sparse_crowd']\n",
     "\n",
-    "\n",
+    "# ✅ endpoint خاص لـ Flutter\n",
     "@app.route(\"/predict\", methods=[\"POST\"])\n",
     "def predict():\n",
     "    try:\n",
@@ -386,17 +440,17 @@
     "            print(\"❌ No image in request\")\n",
     "            return jsonify({\"error\": \"No image uploaded\"}), 400\n",
     "\n",
-    "     \n",
+    "        # حفظ الصورة المؤقتة\n",
     "        f = request.files['image']\n",
     "        temp_path = \"temp.jpg\"\n",
     "        f.save(temp_path)\n",
     "\n",
-    "     \n",
+    "        # تجهيز الصورة\n",
     "        img = image.load_img(temp_path, target_size=(224, 224))\n",
     "        img_array = image.img_to_array(img)\n",
     "        img_array = np.expand_dims(img_array, axis=0) / 255.0\n",
     "\n",
-    "\n",
+    "        # التنبؤ\n",
     "        predictions = model.predict(img_array)\n",
     "        label = class_names[np.argmax(predictions)]\n",
     "\n",
@@ -408,11 +462,11 @@
     "        print(\"❌ Internal server error:\", str(e))\n",
     "        return jsonify({\"error\": str(e)}), 500\n",
     "\n",
-    "\n",
+    "# ربط ngrok\n",
     "public_url = ngrok.connect(5000)\n",
     "print(\"🌐 Public URL:\", public_url)\n",
     "\n",
-    "\n",
+    "# تشغيل السيرفر\n",
     "app.run(port=5000)\n"
    ]
   },
@@ -828,6 +882,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "724a48f7-f2ff-4818-b722-77c658d54cc0",
+   "metadata": {
+    "id": "724a48f7-f2ff-4818-b722-77c658d54cc0"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0082ca77-fa23-4d3a-b153-85c025c5adf0",
+   "metadata": {
+    "id": "0082ca77-fa23-4d3a-b153-85c025c5adf0",
+    "outputId": "56ab8404-ab24-4aeb-a452-73ba9839d30b"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85edc14-e39f-46ba-a9d5-be826c2919eb",
+   "metadata": {
+    "id": "b85edc14-e39f-46ba-a9d5-be826c2919eb"
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0079bcae-7b87-45a8-ba7c-63ba37711279",
+   "metadata": {
+    "id": "0079bcae-7b87-45a8-ba7c-63ba37711279",
+    "outputId": "85fe5221-18d9-44eb-af07-036299ba55ef"
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1c18932e-fecb-49e8-970c-b966be015497",
    "metadata": {
     "id": "1c18932e-fecb-49e8-970c-b966be015497",
@@ -966,6 +1066,16 @@
     "# Save the model in the recommended format\n",
     "model.save('augmented_model.keras')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe68ef8f-ff13-43ed-b858-301b7a7329f6",
+   "metadata": {
+    "id": "fe68ef8f-ff13-43ed-b858-301b7a7329f6"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
